<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MemeCard"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/memeImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@drawable/placeholder"
            android:contentDescription="@string/meme"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/memeTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/popular_memes"
                style="@style/MemeCard.Title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_favorite_border_white_24dp"
                    android:contentDescription="@string/like"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_share_white_24dp"
                    android:contentDescription="@string/share"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>