<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.create.CreateMemeActivity"
    android:id="@+id/rootViewCreate"
    android:background="@color/colorDarkBlue">

    <FrameLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/toolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:colorAccent"
                    android:padding="8dp">

                    <ImageButton
                        android:id="@+id/closeButton"
                        android:src="@drawable/ic_close_blue_24dp"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/close"
                        android:layout_gravity="center_vertical"/>

                    <Button
                        android:id="@+id/createMemeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:background="@android:color/transparent"
                        android:layout_gravity="end|center_vertical"/>

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextField.Transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/memeTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:maxLength="140"
                        android:hint="@string/title"
                        android:textColorHint="@color/colorLightGrey"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:inputType="textCapSentences|textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextField.Transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/memeDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="1000"
                        android:hint="@string/description"
                        android:textColorHint="@color/colorLightGrey"
                        android:textColor="@color/colorWhite"
                        android:inputType="textCapSentences|textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/memeImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:src="@drawable/placeholder"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/meme"
                        android:scaleType="fitXY"/>

                    <ImageButton
                        android:id="@+id/removeImageButton"
                        android:src="@drawable/ic_remove_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/close"
                        android:layout_gravity="end"
                        android:layout_marginTop="32dp"
                        android:visibility="gone"
                        android:layout_marginEnd="16dp"/>

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memes_error_write"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTransparent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?android:colorPrimary"/>

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chooseImageButton"
        android:src="@drawable/ic_image_blue_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>