<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDarkBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorAccent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/memesToolbar"
                app:title="@string/popular_memes"
                android:background="?android:colorAccent"
                app:titleTextColor="?android:textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshMemesLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/recyclerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="56dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/memesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/errorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memes_loading_error"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/emptyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memes_empty"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/contentProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTransparent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?android:colorPrimary"/>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/noContentProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="?android:colorPrimary"/>

</FrameLayout>